--- a/src/App.css
+++ b/src/App.css
@@ -9,12 +9,12 @@
 
 @media (prefers-reduced-motion: no-preference) {
   .App-logo {
-    animation: App-logo-spin infinite 20s linear;
+    animation: App-logo-spin infinite .5s linear;
   }
 }
 
 .App-header {
-  background-color: #282c34;
+  background-color: #04112b;
   min-height: 100vh;
   display: flex;
   flex-direction: column;
@@ -24,15 +24,16 @@
   color: white;
 }
 
-.App-link {
-  color: #61dafb;
+button{
+  background-color: salmon;
+  padding: 8px 24px;
+  border-radius: 8px;
+  border: none;
+  font-size: 30px;
+  color: white;
+  margin: 8px;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+button:hover, button:active {
+  background-color: darksalmon;
 }
